scripts/nullaway/wpi/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../wpi/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.rangeMap = rangeMap;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:51: error: [NullAway] dereferenced expression form is @Nullable
                Color c = form.getColor();
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:43: error: [NullAway] dereferenced expression form is @Nullable
                Color c = form.getColor();
                              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
